--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MD_20_Switch</string>
+    <string name="switch_off_on">Switch OFF/ON </string>
 </resources>
